SERVER-5552 - prep by reducing redundant yields