src/mongo/db/ops/update.cpp
@@ -267,23 +267,6 @@ namespace mongo {
 
                 if ( !c->currentMatches( &details ) ) {
                     c->advance();
-
-                    if ( debug.nscanned % 256 == 0 && ! atomic ) {
-                        if ( cc.get() == 0 ) {
-                            shared_ptr< Cursor > cPtr = c;
-                            cc.reset( new ClientCursor( QueryOption_NoCursorTimeout , cPtr , ns ) );
-                        }
-                        if ( ! cc->yield() ) {
-                            cc.release();
-                            // TODO should we assert or something?
-                            break;
-                        }
-                        if ( !c->ok() ) {
-                            break;
-                        }
-                        d = nsdetails(ns);
-                        nsdt = &NamespaceDetailsTransient::get(ns);
-                    }
                     continue;
                 }
 
@@ -422,22 +405,6 @@ namespace mongo {
                         return UpdateResult( 1 , 1 , numModded , BSONObj() );
                     if ( willAdvanceCursor )
                         c->recoverFromTouchingEarlierIterate();
-
-                    if ( debug.nscanned % 64 == 0 && ! atomic ) {
-                        if ( cc.get() == 0 ) {
-                            shared_ptr< Cursor > cPtr = c;
-                            cc.reset( new ClientCursor( QueryOption_NoCursorTimeout , cPtr , ns ) );
-                        }
-                        if ( ! cc->yield() ) {
-                            cc.release();
-                            break;
-                        }
-                        if ( !c->ok() ) {
-                            break;
-                        }
-                        d = nsdetails(ns);
-                        nsdt = &NamespaceDetailsTransient::get(ns);
-                    }
 
                     getDur().commitIfNeeded();
 
